--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,14 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView3"
@@ -25,22 +17,28 @@
         android:textSize="20dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="304dp"
-        android:layout_height="370dp"
-        android:layout_marginTop="36dp"
-        app:layout_constraintBottom_toTopOf="@+id/materialCardView"
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/materialcard"
+        android:layout_width="match_parent"
+        android:layout_height="390dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginVertical="20dp"
+        app:cardCornerRadius="30dp"
+        app:cardElevation="30dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/rrr" />
+        app:layout_constraintTop_toBottomOf="@+id/textView3">
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            android:src="@drawable/rrr"></ImageView>
+    </com.google.android.material.card.MaterialCardView>
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/materialCardView"
@@ -126,7 +124,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="30dp"
                 android:backgroundTint="@color/btn_color"
-                android:contentDescription="@string/stop_button"
                 android:elevation="50dp"
                 android:tint="@color/white"
                 app:borderWidth="2dp"
@@ -145,7 +142,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="35dp"
                 android:backgroundTint="@color/btn_color"
-                android:contentDescription="@string/stop_button"
                 android:elevation="50dp"
                 android:tint="@color/white"
                 app:borderWidth="2dp"
